# hms

./: .clang-tidy  .gitignore  .gitmodules  BUILDING.md  CMakeLists.txt  CMakePresets.json  HACKING.md  README.md  conanfile.py  docs.cmake  install-script.cmake  uml.uxf  variables.cmake
.github/workflows/: ci.yml
cmake/: dev-mode.cmake  install-rules.cmake  lint-targets.cmake
docs/: hms_analysis_and_design
source/: CMakeLists.txt  hmsConfig.hpp.in  lib.cpp  main.cpp  network.cpp  network.hpp  subsystem.hpp  system.cpp  system.hpp
test/: CMakeLists.txt
test/source/: hms_test.cpp  system_tests.cpp  system_tests.hpp
